Prepare for new JavaScript-direct source files

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
-*.user.js linguist-generated=true
+gmail-refresher.user.js linguist-generated=true
+hexcellslevels-clipper.user.js linguist-generated=true
+steam-discovery-anti-vn.user.js linguist-generated=true
+steam-prices.user.js linguist-generated=true
+steam-ratings.user.js linguist-generated=true
